fix z-index progress bar

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -105,6 +105,7 @@ h1, h2, h3, h4, h5
   font-weight: 200
 
 .main
+  z-index: 50
   float: left
   position: relative
   width: 100%
